atualizado com video antes do bootstrap

--- a/cap6.html
+++ b/cap6.html
@@ -84,7 +84,21 @@
                 <p><strong>· PD&amp;I em Rastreabilidade Integrada:</strong> Estudar a viabilidade de incorporar microchips ou outros elementos de rastreabilidade passivos diretamente no substrato da cédula, além do RFID externo, para fortalecer a cadeia de custódia e a auditabilidade, tornando a cédula ainda mais “inteligente” e segura.</p>
                 <h2>2 PD&amp;I para o Modelo Mecatrônico de Votação (Frente de Trabalho B)</h2>
                 <p>Esta frente de PD&amp;I visa viabilizar os equipamentos que darão vida ao sistema, a “Mesa Receptora Independente” e a “Máquina Apuradora”, além de todo o arcabouço tecnológico que os suporta.</p>
-                <p>Ver Ensaio Mecatrônico em: https://www.youtube.com/watch?v=3mTU9ob0Jrc</p>
+                <div class="youtube-container">
+    <iframe 
+        src="https://www.youtube.com/embed/3mTU9ob0Jrc"
+        title="Ensaio Virtual do Voto Acessivel com voto de deficiente visual e físico."
+        frameborder="0"
+        allowfullscreen
+        loading="lazy">
+    </iframe>
+
+    
+    <p class="video-caption">
+        <strong>Vídeo:</strong> Ensaio Virtual do Voto Acessivel com voto de deficiente visual e físico.
+    </p>
+</div>
+				
                 <h3>2.1 PD&amp;I para Conceituar Todo o Processo de Captura do Voto: Foco na Interação do Eleitor com a Mesa Receptora</h3>
                 <p>O objetivo é desenvolver um processo de captura do voto que seja exemplar em usabilidade e acessibilidade, garantindo a autonomia do eleitor, a integridade do voto e a eficiência operacional.</p>
                 <p><strong>· Design Centrado no Usuário (UCD) para a Mesa Receptora:</strong></p>
@@ -309,7 +323,7 @@
     <footer role="contentinfo">
         <p><strong>Voto Sustentável e Acessível</strong></p>
         <p>Uma perspectiva para o futuro eleitoral do Brasil</p>
-        <p>&copy; 2025 - Todos os direitos reservados</p>
+        		<a href="mailto:rnadaf@tre-mt.jus.br">Contato</a>
         <p>Desenvolvido com foco em <strong>sustentabilidade</strong>, <strong>acessibilidade</strong> e <strong>transparência</strong></p>
     </footer>
     <!-- Google tag (gtag.js) -->
