--- a/cap9.html
+++ b/cap9.html
@@ -87,7 +87,7 @@
     <footer role="contentinfo">
         <p><strong>Voto Sustentável e Acessível</strong></p>
         <p>Uma perspectiva para o futuro eleitoral do Brasil</p>
-        <p>&copy; 2025 - Todos os direitos reservados</p>
+        		<a href="mailto:rnadaf@tre-mt.jus.br">Contato</a>
         <p>Desenvolvido com foco em <strong>sustentabilidade</strong>, <strong>acessibilidade</strong> e <strong>transparência</strong></p>
     </footer>
     <!-- Google tag (gtag.js) -->
